--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@gsap/react": "^2.1.1",
+    "axios": "^1.8.4",
     "gsap": "^3.12.5",
     "lenis": "^1.1.13",
     "prism-react-renderer": "^2.4.1",
