--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-github-calendar": "^4.5.6",
+    "react-vertical-timeline-component": "^3.5.3",
     "tailwind-scrollbar": "^3.1.0"
   },
   "devDependencies": {
